config/dex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service
  namespace: dex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - login.do.storageos.net
    secretName: ingress-cert
  rules:
  - host: login.do.storageos.net
    http:
      paths:       
      - path: /dex
        pathType: Prefix
        backend:
          service:
            name: dex
            port:
              number: 32000
